--- a/app-sup.yml
+++ b/app-sup.yml
@@ -5,7 +5,6 @@ networks:
     driver: bridge
 
 volumes:
-  prometheus-data: {}
   grafana-data: {}
   alertmanager-data: {}
 
@@ -37,8 +36,7 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus-nas
     volumes:
-      - prometheus-data:/prometheus
-      - /docker/app-sup/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /docker/app-sup/prometheus:/prometheus
       - /docker/app-sup/prometheus:/etc/prometheus/
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
