--- a/app-nas.yml
+++ b/app-nas.yml
@@ -113,9 +113,10 @@ services:
     environment:
         - REMOTE_SSH_SERVER=192.168.0.12
         - REMOTE_SSH_PORT=2985
+        - REMOTE_SSH_USER=userssh
         - TZ=Europe/Paris
     ports:
-        - 3000:3000
+        - 30000:3000
     networks:
       - net
     labels:
