--- a/app-nas.yml
+++ b/app-nas.yml
@@ -113,7 +113,7 @@ services:
     environment:
         - REMOTE_SSH_SERVER=192.168.0.12
         - REMOTE_SSH_PORT=2985
-        - REMOTE_SSH_USER=userssh
+        - REMOTE_SSH_USER=root
         - TZ=Europe/Paris
     ports:
         - 30000:3000
