--- a/app-nas.yml
+++ b/app-nas.yml
@@ -156,7 +156,7 @@ services:
     volumes:
       - /docker/app-nas/radarr/data:/config
 #      - /path/to/movies:/movies #optional
-#      - /path/to/download-client-downloads:/downloads #optional
+      - /ZFS/repo/transmission/torrents:/downloads #optional
     ports:
       - 7878:7878
     restart: unless-stopped
