--- a/guacamole.env
+++ b/guacamole.env
@@ -1,3 +1,5 @@
-ROOT_PASSWORD_MARIADB=qabLzNTpVGN&3qgP
-USER_GUACAMOLE=user-guacamole
-USER_PASSWORD_GUACAMOLE=j#y&$zwlpAL5ylvj
+MYSQL_ROOT_PASSWORD=qabLzNTpVGN&3qgP
+MYSQL_DATABASE=guacamole_db
+MYSQL_USER=guacamole
+MYSQL_PASSWORD=j#y&$zwlpAL5ylvj
+RECORDING_SEARCH_PATH=/var/lib/guacamole/recordings
