--- a/guacamole2.yml
+++ b/guacamole2.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   guacd:
-    image: guacamole/guacd
+    image: guacamole/guacd:latest
     container_name: guacd
     volumes:
       - /docker/guacamole/drive:/drive:rw
@@ -13,8 +13,8 @@ services:
     image: postgres:latest
     container_name: guacamole_db
     environment:
-      PGDATA: /var/lib/postgresql/data/guacamole
-      POSTGRES_DB: guacamole_db
+      PGDATA=/var/lib/postgresql/data/guacamole
+      POSTGRES_DB=guacamole_db
       POSTGRES_PASSWORD=${GUAC_DB_PASSWORD}
       POSTGRES_USER=${GUACDB_USER}
       TZ: Europe/Paris
@@ -24,12 +24,12 @@ services:
     restart: unless-stopped
 
   guacamole_app:
-    image: guacamole/guacamole
+    image: guacamole/guacamole:latest
     container_name: guacamole_app
     environment:
-      GUACD_HOSTNAME: guacd
-      POSTGRES_DATABASE: guacamole_db
-      POSTGRES_HOSTNAME: guacamole_db
+      GUACD_HOSTNAME=guacd
+      POSTGRES_DATABASE=guacamole_db
+      POSTGRES_HOSTNAME=guacamole_db
       POSTGRES_PASSWORD=${GUAC_DB_PASSWORD}
       POSTGRES_USER=${GUACDB_USER}
 #      TOTP_ENABLED: 'true'
