--- a/guacamole.yml
+++ b/guacamole.yml
@@ -3,8 +3,10 @@ version: "3.8"
 networks:
   net:
     driver: bridge
-    config:
-      -subnet: "172.40.0.0/16"
+    ipam:
+      driver: default
+      config:
+        -subnet: "172.40.0.0/16"
 
 services:
 
