--- a/guacamole.yml
+++ b/guacamole.yml
@@ -44,6 +44,7 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - GUACD_HOSTNAME=guac-proxy
     depends_on:
       - guac-proxy
       - guac-sql
