--- a/watchtower-vps.yml
+++ b/watchtower-vps.yml
@@ -9,7 +9,7 @@ services:
   watchtower:
       container_name: watchtower-vps
       image: containrrr/watchtower:latest
-      restart: unless-stopped
+      restart: always
       environment:
         - TZ=Europe/Paris
         - WATCHTOWER_SCHEDULE= 0 0 0 * * *
