--- a/proxy-vps.yml
+++ b/proxy-vps.yml
@@ -9,7 +9,7 @@ services:
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
     container_name: proxy-vps
-    restart: unless-stopped
+    restart: always
     volumes:
       - "/docker/nginx-proxy-manager/data:/data/"
       - "/docker/nginx-proxy-manager/data:/letsencrypt/"
