--- a/wordpress-vps-2.yml
+++ b/wordpress-vps-2.yml
@@ -28,7 +28,7 @@ services:
 
   db:
     container_name: wordpress-db-vps
-    image: mysql:8.0
+    image: mysql:latest
     restart: always
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
@@ -40,4 +40,5 @@ services:
     networks:
       - net
     labels:
+      - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-vps"
