--- a/app-nas.env
+++ b/app-nas.env
@@ -6,3 +6,5 @@ EMAILOGIN=naspariteau@gmail.com
 APPPASSWORD=musfgqatifhmhbuz
 USER_TRANSMISSION=transmission
 PWD_TRANSMISSION=bEmpF12I2VAiacXI
+SSHUSER=userssh
+SSHPASS="B@ya&Mon$ieur2023!"Ssh
