--- a/app-nas.env
+++ b/app-nas.env
@@ -7,4 +7,4 @@ APPPASSWORD=musfgqatifhmhbuz
 USER_TRANSMISSION=transmission
 PWD_TRANSMISSION=bEmpF12I2VAiacXI
 SSHUSER=userssh
-SSHPASS="B@ya&Mon$ieur2023!"Ssh
+SSHPORT=2985
