--- a/app-nas.yml
+++ b/app-nas.yml
@@ -4,24 +4,6 @@ networks:
 
 services:
 
-  filebrowser:
-    image: hurlenko/filebrowser:latest
-    user: "${UID}:${GID}"
-    container_name: filebrowser-nas
-    ports:
-      - 1000:8080
-    networks:
-      - net
-    volumes:
-      - "/ZFS:/data"
-      - "/docker/app-nas/filebrowser/config/:/config"
-    environment:
-      - "FB_BASEURL=/filebrowser"
-    restart: unless-stopped
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
-
   transmission:
     image: lscr.io/linuxserver/transmission:latest
     container_name: transmission-nas
@@ -44,33 +26,7 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
-
-  watchtower:
-    container_name: watchtower-nas
-    image: containrrr/watchtower:latest
-    restart: unless-stopped
-    environment:
-      - TZ=Europe/Paris
-      - WATCHTOWER_SCHEDULE= 0 0 0 * * *
-      - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_REMOVE_VOLUMES=true
-      - WATCHTOWER_LOG_LEVEL=info
-      - WATCHTOWER_LABEL_ENABLE=true
-      - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
-      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
-    networks:
-      - net
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    labels:
-      - "org.label-schema.group=app-admin"
+      - "org.label-schema.group=app-nas"
 
   resilio:
     container_name: resilio-nas
@@ -91,7 +47,7 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
+      - "org.label-schema.group=app-nas"
 
   vaultwarden:
     container_name: vaultwarden-nas
@@ -105,38 +61,7 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
-
-  organizr:
-    image: organizr/organizr:latest
-    container_name: organizr-nas
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/Paris
-    volumes:
-      - /docker/app-nas/organizr/config/organizr:/config
-    ports:
-    - 72:80
-    restart: unless-stopped
-    networks:
-      - net
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
-
-  kuma:
-    image: louislam/uptime-kuma:1
-    container_name: kuma-nas
-    volumes:
-      - /docker/app-nas/kuma:/app/data
-    ports:
-    - 3001:3001
-    restart: unless-stopped
-    networks:
-      - net
-    labels:
-      - "org.label-schema.group=app-admin"
+      - "org.label-schema.group=app-nas"
 
   firefox:
     image: jlesage/firefox:latest
@@ -150,20 +75,4 @@ services:
       - "/docker/app-nas/firefox:/config:rw"
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
-
-  wetty:
-    image: wettyoss/wetty:latest
-    container_name: wetty-nas
-    networks:
-      - net
-    environment:
-      - SSHHOST=192.168.0.12
-      - SSHPORT=${SSHPORT}
-      - SSHUSER=${SSHUSER}
-    ports:
-      - 3000:3000
-    restart: unless-stopped
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-admin"
+      - "org.label-schema.group=app-nas"
