--- a/app-vps.env
+++ b/app-vps.env
@@ -4,3 +4,5 @@ SMTPSERVER=smtp.gmail.com
 EMAILPORT=587
 EMAILOGIN=naspariteau@gmail.com
 APPPASSWORD=musfgqatifhmhbuz
+SSHUSER=userssh
+SSHPORT=2985
