--- a/app-nas.yml
+++ b/app-nas.yml
@@ -31,7 +31,7 @@ services:
   resilio:
     container_name: resilio-nas
     image: lscr.io/linuxserver/resilio-sync:latest
-    restart: unless-stopped
+    restart: always
     environment:
       - PUID=1000
       - PGID=1000
@@ -52,7 +52,7 @@ services:
   vaultwarden:
     container_name: vaultwarden-nas
     image: vaultwarden/server:latest
-    restart: unless-stopped
+    restart: always
     volumes:
       - "/docker/app-nas/vaultwarden:/data/"
     ports:
