--- a/proxy-nas.yml
+++ b/proxy-nas.yml
@@ -7,7 +7,7 @@ services:
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
     container_name: proxy-nas
-    restart: unless-stopped
+    restart: always
     volumes:
       - "/docker/app-proxy:/data/"
       - "/docker/app-proxy:/letsencrypt/"
