--- a/proxy-vps.yml
+++ b/proxy-vps.yml
@@ -22,4 +22,4 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-vps"
+      - "org.label-schema.group=system-vps"
