--- a/wordpress-vps.yml
+++ b/wordpress-vps.yml
@@ -2,6 +2,10 @@ networks:
   net:
     driver: bridge
 
+volumes:
+  wordpress:
+  db:
+
 services:
 
   wordpress:
@@ -15,7 +19,7 @@ services:
       - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
       - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
     volumes:
-      - /docker/wordpress/wordpress:/var/www/html
+      - wordpress:/var/www/html
     networks:
       - net
     labels:
@@ -32,7 +36,7 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
-      - /docker/wordpress/mysql:/var/lib/mysql
+      - db:/var/lib/mysql
     networks:
       - net
     labels:
