--- a/app-system.yml
+++ b/app-system.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-system"
+      - "org.label-schema.group=nas-system"
 
   watchtower:
     container_name: watchtower-nas
@@ -46,7 +46,7 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     labels:
-      - "org.label-schema.group=app-system"
+      - "org.label-schema.group=nas-system"
 
   organizr:
     image: organizr/organizr:latest
@@ -64,7 +64,7 @@ services:
       - net
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-system"
+      - "org.label-schema.group=nas-system"
 
   kuma:
     image: louislam/uptime-kuma:1
@@ -77,7 +77,7 @@ services:
     networks:
       - net
     labels:
-      - "org.label-schema.group=app-system"
+      - "org.label-schema.group=nas-system"
 
   wetty:
     image: wettyoss/wetty:latest
@@ -93,4 +93,4 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
-      - "org.label-schema.group=app-system"
+      - "org.label-schema.group=nas-system"
