--- a/monitoring-vps.yml
+++ b/monitoring-vps.yml
@@ -16,7 +16,7 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    restart: always
+    restart: unless-stopped
     ports:
       - '9100:9100'
     networks:
@@ -33,7 +33,7 @@ services:
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
-    restart: always
+    restart: unless-stopped
     ports:
       - '8080:8080'
     networks:
