--- a/portainer-vps.yml
+++ b/portainer-vps.yml
@@ -2,7 +2,7 @@ services:
   portainer:
     container_name: portainer-vps
     image: portainer/portainer-ce:latest
-    restart: always
+    restart: unless-stopped
     volumes:
       - "/docker/portainer:/data"
       - "/var/run/docker.sock:/var/run/docker.sock"
