--- a/app-media.yml
+++ b/app-media.yml
@@ -11,7 +11,7 @@ services:
       - 4533:4533
     networks:
       - net
-    restart: unless-stopped
+    restart: always
     environment:
       - ND_SCANSCHEDULE=24h
     volumes:
@@ -39,7 +39,7 @@ services:
       - 7359:7359/udp
     networks:
       - net
-    restart: unless-stopped
+    restart: always
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-media"
